<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/floralWhite"
    android:orientation="vertical">


    <TextView
        style="@style/listView"
        android:text="@string/dept"
        android:textColor="@color/flame_800"
        android:textSize="25sp" />


    <TextView
        style="@style/listView"
        android:layout_height="wrap_content"
        android:text="@string/courseOffer"
        android:textColor="@color/flame_800"
        android:textSize="21sp" />

    <TextView
        style="@style/listView"
        android:text="@string/program"
        android:textColor="@color/flame_800"
        android:textSize="21sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:background="@color/blackOlive_500" />

    <EditText
        android:id="@+id/batchC"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:layout_gravity="center"
        android:hint="@string/batch"
        android:inputType="number"
        android:textAlignment="center" />

    <Button
        android:id="@+id/fetchC"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/fetch" />

    <TextView
        android:id="@+id/headerC"
        style="@style/listView"
        android:layout_marginTop="5dp"
        android:textColor="@color/flame_800"
        android:textSize="20sp" />

    <ListView
        android:id="@+id/list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

    </ListView>
</LinearLayout>
