<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/floralWhite"
    android:orientation="vertical">

    <TextView
        style="@style/listView"
        android:text="@string/dept"
        android:textColor="@color/flame_800"
        android:textSize="26sp" />

    <TextView
        style="@style/listView"
        android:text="@string/routine"
        android:textColor="@color/flame_800"
        android:textSize="25sp" />

    <TextView
        style="@style/listView"
        android:text="@string/program"
        android:textColor="@color/flame_800"
        android:textSize="25sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:background="@color/blackOlive_500" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="6dp">

        <TextView
            android:id="@+id/session"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/lastUpdate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:gravity="end"
            android:textSize="15sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <EditText
            android:id="@+id/batchR"
            android:layout_width="wrap_content"
            android:layout_height="45dp"
            android:layout_marginEnd="10dp"
            android:hint="@string/batch"
            android:inputType="number"
            android:textAlignment="center" />

        <EditText
            android:id="@+id/sectionR"
            android:layout_width="wrap_content"
            android:layout_height="45dp"
            android:layout_gravity="center"
            android:hint="@string/section"
            android:inputType="text"
            android:textAlignment="center" />
    </LinearLayout>

    <Button
        android:id="@+id/fetchR"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/fetch" />

    <TextView
        android:id="@+id/headerR"
        style="@style/listView"
        android:layout_marginTop="5dp"
        android:textColor="@color/flame_800"
        android:textSize="20sp" />

    <ListView
        android:id="@+id/list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" />
</LinearLayout>