<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Admin.CoursesList">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                style="@style/listView"
                android:text="@string/program"
                android:textColor="@color/flame_800"
                android:textSize="25sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/paleSilver" />

            <TextView
                android:id="@+id/addNewCourse"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@color/flame_100"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/addNewCourse"
                android:textAppearance="?android:textAppearanceLarge"
                android:textColor="@color/floralWhite" />

            <TextView
                style="@style/listView"
                android:layout_height="wrap_content"
                android:text="@string/listOfCourses"
                android:textColor="@color/flame_800"
                android:textSize="21sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/blackOlive_500" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/paleSilver"
                android:orientation="horizontal">

                <TextView
                    style="@style/courseList"
                    android:layout_weight="1"
                    android:text="@string/CourseCode" />


                <TextView
                    style="@style/courseList"
                    android:layout_weight="2"
                    android:text="@string/CourseTitle" />

                <TextView
                    style="@style/courseList"
                    android:layout_weight="1"
                    android:text="@string/credit" />

                <TextView
                    style="@style/courseList"
                    android:layout_weight="1"
                    android:text="@string/prerequisite" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/blackOlive_500" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/courseRecycler"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:nestedScrollingEnabled="false" />

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</LinearLayout>