<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/floralWhite"
    android:orientation="vertical"
    tools:context=".User.TransportActivityUser">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            style="@style/listView"
            android:background="@color/EerieBlack_800"
            android:text="@string/regularBusSchedule"
            android:textAppearance="?android:textAppearanceMedium"
            android:textColor="@color/floralWhite" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="210dp"
            android:scaleType="centerInside"
            android:src="@drawable/bus" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="2dp"
            android:background="@color/EerieBlack_800"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/LutransportService"
            android:textAppearance="?android:textAppearanceMedium"
            android:textColor="@color/floralWhite" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/blackOlive_500" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/paleSilver">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:padding="5dp"
                android:text="@string/route"
                android:textAlignment="center"
                android:textColor="@color/EerieBlack_800"
                android:textSize="16sp"
                android:textStyle="bold" />

            <View
                android:layout_width="2dp"
                android:layout_height="match_parent"
                android:background="@color/blackOlive_500" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:padding="5dp"
                android:text="@string/startingPoint"
                android:textAlignment="center"
                android:textColor="@color/EerieBlack_800"
                android:textSize="16sp"
                android:textStyle="bold" />

            <View
                android:layout_width="2dp"
                android:layout_height="match_parent"
                android:background="@color/blackOlive_500" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="5dp"
                android:layout_weight="3"
                android:padding="5dp"
                android:text="@string/bStopPoint"
                android:textAlignment="center"
                android:textColor="@color/EerieBlack_800"
                android:textSize="16sp"
                android:textStyle="bold" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/blackOlive_500" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/paleSilver">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:padding="5dp"
                android:text="@string/one"
                android:textAlignment="center"
                android:textColor="@color/EerieBlack_800"
                android:textSize="16sp" />

            <View
                android:layout_width="2dp"
                android:layout_height="match_parent"
                android:background="@color/blackOlive_500" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:padding="5dp"
                android:text="@string/tilagor"
                android:textAlignment="center"
                android:textColor="@color/EerieBlack_800"
                android:textSize="15sp" />

            <View
                android:layout_width="2dp"
                android:layout_height="match_parent"
                android:background="@color/blackOlive_500" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="5dp"
                android:layout_weight="3"
                android:padding="5dp"
                android:text="@string/R1"
                android:textColor="@color/EerieBlack_800"
                android:textSize="12sp" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/blackOlive_500" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/paleSilver">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:padding="5dp"
                android:text="@string/two"
                android:textAlignment="center"
                android:textColor="@color/EerieBlack_800"
                android:textSize="16sp" />

            <View
                android:layout_width="2dp"
                android:layout_height="match_parent"
                android:background="@color/blackOlive_500" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:padding="5dp"
                android:text="@string/tilagorST"
                android:textAlignment="center"
                android:textColor="@color/EerieBlack_800"
                android:textSize="15sp" />

            <View
                android:layout_width="2dp"
                android:layout_height="match_parent"
                android:background="@color/blackOlive_500" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="5dp"
                android:layout_weight="3"
                android:padding="5dp"
                android:text="@string/R2"
                android:textColor="@color/EerieBlack_800"
                android:textSize="12sp" />


        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/blackOlive_500" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/paleSilver">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:padding="5dp"
                android:text="@string/three"
                android:textAlignment="center"
                android:textColor="@color/EerieBlack_800"
                android:textSize="16sp" />

            <View
                android:layout_width="2dp"
                android:layout_height="match_parent"
                android:background="@color/blackOlive_500" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:padding="5dp"
                android:text="@string/lakkatura"
                android:textAlignment="center"
                android:textColor="@color/EerieBlack_800"
                android:textSize="15sp" />

            <View
                android:layout_width="2dp"
                android:layout_height="match_parent"
                android:background="@color/blackOlive_500" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="5dp"
                android:layout_weight="3"
                android:padding="5dp"
                android:text="@string/R3"
                android:textColor="@color/EerieBlack_800"
                android:textSize="12sp" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/blackOlive_500" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/paleSilver">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:padding="5dp"
                android:text="@string/four"
                android:textAlignment="center"
                android:textColor="@color/EerieBlack_800"
                android:textSize="16sp" />

            <View
                android:layout_width="2dp"
                android:layout_height="match_parent"
                android:background="@color/blackOlive_500" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:padding="2dp"
                android:text="@string/tilagor"
                android:textAlignment="center"
                android:textColor="@color/EerieBlack_800"
                android:textSize="15sp" />

            <View
                android:layout_width="2dp"
                android:layout_height="match_parent"
                android:background="@color/blackOlive_500" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="5dp"
                android:layout_weight="3"
                android:padding="5dp"
                android:text="@string/R4"
                android:textColor="@color/EerieBlack_800"
                android:textSize="12sp" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/blackOlive_500" />

    </LinearLayout>
</ScrollView>